#if DEBUG
#_dbg_flag:=-ggdb
#endif

#SUBDIRS :=Ice common Shell EventChannel/service ContentStore  StreamService CDNLib CRG ComcastNGOD CPE Sentry StreamSmith EventGateway Action/A3Message EventRE  ContentLib/ContentLibClient ContentLib AccreditedPath EdgeRM/Pho_ERM  VirtualStreamingService  Weiwoo application SiteAdmin DummySS  ../Generic/xmlshd/
SUBDIRS :=Ice common Shell EventChannel/service ContentStore  StreamService CDNLib CRG ComcastNGOD CPE Sentry StreamSmith EventGateway Action/A3Message EventRE  ContentLib/ContentLibClient ContentLib AccreditedPath VirtualStreamingService EdgeRM Weiwoo application SiteAdmin DummySS ../Generic/xmlshd/

CURRENTPATH=$(PWD)

INCLUDES=

export INCLUDES 

