SUBDIRS:=pho/pho_SeaChange admin
clean-local:
	-rm -rf {ServiceGroupDict,ServiceGroupToStreamLink,StorageDict,StorageLinkToTicket,StorageToStorageLink,StreamerDict,StreamerToStorageLink,StreamerToStreamLink,StreamLinkToTicket,TsPathAdmin,}.{h,cpp}
CURRENTPATH:=$(PWD)
INCLUDES=
export INCLUDES
